--- a/src/Card.css
+++ b/src/Card.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Dosis:300,400,600,700,800|Montserrat:900&display=swap');
+
 .cw {
     width: 15vw;
 }
@@ -5,6 +7,28 @@
 #data {
     height: 75px;
     width: 100%;
+    font-family: 'Dosis', sans-serif;
+}
+
+.chemName {
+    font-weight: 800;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.chemName:hover {
+    font-weight: 800;
+    display: block;
+    white-space: normal;
+    overflow: visible;
+    z-index: 100;
+}
+
+#myCardTitle {
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 1px;
+    -webkit-text-stroke: 0.5px black;
 }
 
 .Safe {
@@ -25,11 +49,14 @@
 }
 
 .safetyLevel {
+    font-family: 'Dosis', sans-serif;
     color: white;
     text-transform: uppercase;
-    font-weight: bold;
+    font-weight: 800;
     text-decoration: none;
     border-radius: 10px;
+    letter-spacing: 1px;
+    -webkit-text-stroke: 1px black;
 }
 
 .customButton {
